# Dockium

./: .gitignore  README.md  build_dockium.ps1  deploy.sh  install_service.ps1  make_release.ps1
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: auth.rs  compose.rs  containers.rs  images.rs  mod.rs  networks.rs  settings.rs  system.rs  volumes.rs
backend/src/db/: mod.rs
backend/src/models/: mod.rs
backend/src/services/: compose_service.rs  docker_service.rs  mod.rs  settings_service.rs  system_service.rs
deploy/: Dockerfile  config.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/pages/: Compose.tsx  Containers.tsx  Dashboard.tsx  Images.tsx  Networks.tsx  Settings.tsx  Volumes.tsx
scripts/: install.sh
